Changes for 2.2.18rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.2.17

New features:
A.F....... [ZBX-1357] updated Czech, French, Italian, Japanese, Korean, Polish, Portuguese (Brazil) translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 2.2.17rc1

Bug fixes:
........S. [ZBX-11781] fixed potential buffer overflow in the housekeeper process (abs)
.......PS. [ZBX-10902] fixed wrong averages in web monitoring if a web server doesn't respond to a request (abs)
.......PS. [ZBX-11655] fixed Oracle and MySQL column limit calculation when using UTF-8 (vso)
...G...... [ZBX-11719] fixed reading files with vfs.file.regmatch[] and vfs.file.cksum[] keys on windows (Sergejs)
.......PS. [ZBX-11587] fixed handling database failure during transaction commit (viktors)
.......PS. [ZBX-9889,ZBX-11674] fixed vmware.eventlog item values to have unique timestamps in history table (dimir)
........S. [ZBX-11635] fixed possible deadlocks when removing obsolete VMWare services (Sergejs)
.......PS. [ZBX-11481] fixed resolving macros for ip and dns fields in interfaces that are linked to main interface with {HOST.IP} and {HOST.DNS} macros (Sergejs)
..F....... [ZBX-11527] fixed displaying maintenance icon for trigger element in maps (Cemeris)
..F....... [ZBX-11354] fixed applications being reset in templated items and item prototypes when modifying its parent (Ivo)
...G...... [ZBX-11494] fixed "system.stat" returning not supported after Zabbix agent restart on AIX (viktors)
...G...... [ZBX-11479] fixed threaded metric to handle interruption by a signal (vso)
........S. [ZBX-11534] fixed default operation step duration to be included in minimal step calculation instead of overriding (vso)
...G...... [ZBX-11528] fixed zabbix_get to match zabbix_server protocol (vso)
