@@ -3,6 +3,7 @@ Changes for 2.2.18rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-11758] fixed crash in web monitoring when variable is empty or the first step was called regexp function on Solaris (Sergejs)
 
 --------------------------------------------------------------------------------
 Changes for 2.2.17
